--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </a>
             </div>
             <div class="project1">
-                <a href="https://th-eccomerce-website.netlify.app/home">
+                <a href="https://the-eccomerce-website.netlify.app/home">
                 <img src="https://i.ibb.co/KX96SYX/image.png" alt="First Image" />
                 <h3>Eccomerce-Website</h3>
             </a>
