--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>  
-        <h1 class="title">Larry Portfolio</h1>
+        <h1 class="title">Damola Balogun</h1>
 
         <i class="menu_bar"onclick="open_menu()">Menu</i> 
 
@@ -38,12 +38,12 @@
         <br /><br /><br /><br /><br /><br /><br />
     <div class="first_section">
         <br /><br />
-        <h1><span style="font-weight: 700">Hey,</span> I'm Rasheed Galeeb</h1>
+        <h1><span style="font-weight: 700">Hey,</span> I'm Damola Balogun</h1>
         <p class="des">
             Got a Project, I can help you to Build Outstanding and Modern Websites.
         </p>
         <button class="cta">
-            <a href="mailto:rasheedgaleeb0@gmail.com">
+            <a href="mailto:hawkview24@gmail.com">
             Contact-Me
             </a>
         </button>
@@ -132,7 +132,7 @@
          and I will get back to you as soon as possible</p>
 
          <div class="forms">
-         <form action="mailto:rasheedgaleeb0@gmail.com">
+         <form action="mailto:hawkview24@gmail.com">
             <br /><br />
             <input type="name" placeholder="Enter Your Name" required/><br /><br />
             <input type="email" placeholder="Enter Your Email" required/><br /><br />
@@ -147,7 +147,7 @@
         <footer>
             <br /><br /><br /><br />
             <div class="box">
-            <h2 style="text-transform: uppercase;font-weight: 700;color: white;">Rasheed Galeeb</h2>
+            <h2 style="text-transform: uppercase;font-weight: 700;color: white;">Damola Balogun</h2>
             <p class="des3">
                 A focused Web Developer building 
                 Websites and Web Applications that leads to the success of the overall product.
@@ -156,7 +156,7 @@
             </div>
             <hr />
             <br /><br />
-            <p style="text-align: center;color: white;">© Copyright 2022. Made by Rasheed Galeeb</p>
+            <p style="text-align: center;color: white;">© Copyright 2022. Made by Damola Balogun</p>
         </footer>
 
 </body>
