--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </a>
         </button>
     </div>
-    <img src="download (2).jfif" alt="">
+    <img src="https://images.pexels.com/photos/3184454/pexels-photo-3184454.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1.jfif" alt="">
     </div>
 
     <div class="about_section">
