--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>My Portfolio</title>
+    <title>AlphaStudioPro</title>
     <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 
     <header>  
-        <h1 class="title">Damola Balogun</h1>
+        <h1 class="title">AlphaStudioPro</h1>
 
         <i class="menu_bar"onclick="open_menu()">Menu</i> 
 
