--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <br /><br />
         <h1><span style="font-weight: 700">Hey,</span> I'm Damola Balogun</h1>
         <p class="des">
-            Got a Project, I can help you to Build Outstanding and Modern Websites.
+            Got a Project, We can help you to Build Outstanding and Modern Websites.
         </p>
         <button class="cta">
             <a href="mailto:hawkview24@gmail.com">
@@ -42,20 +42,20 @@
     </div>
 
     <div class="about_section">
-        <h1>About Me</h1>
+        <h1>About Us</h1>
     <p class="des2">
-        Here you will find more information about me, what I do,
-        and my current skills in terms of programming and skill.
+        Here you will find more information about me and my team, what we do,
+        and our current skills in terms of web desiging and graphic design.
     </p>
 
     <div class="bio">
 
     <div class="about_me">
         <h2 class="title2">
-            Get to Know Me!
+            Get to Know Our Designer!
         </h2>
         <p class="infos">
-           I'm a Web Developer who bullds Websites, Web Applications and have 3 years of experience in the world of web designing, Check out some of my work in the Projects section.
+           I'm a Web Developer who bullds Websites, Web Applications and have 5 years of experience in the world of web designing and graphic design, Check out some of my work in the Projects section.
            <br /><br />
            I also like sharing content related to the stuff that I have learned over the years in
            Web Development so it can help other people of the Dev Community.
