--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <div class="about_section">
         <h1>About Us</h1>
     <p class="des2">
-        Here you will find more information about me and my team, what we do,
-        and our current skills in terms of web desiging and graphic design.
+        Here you will find more information about me and my team, what we do, and our current skills in terms of web designing and graphic design.
     </p>
 
     <div class="bio">
@@ -55,20 +54,17 @@
             Get to Know Our Designer!
         </h2>
         <p class="infos">
-           I'm a Web Developer who bullds Websites, Web Applications and have 5 years of experience in the world of web designing and graphic design, Check out some of my work in the Projects section.
-           <br /><br />
-           I also like sharing content related to the stuff that I have learned over the years in
-           Web Development so it can help other people of the Dev Community.
-           Feel free to Connect or Follow me on my Linkedin, Email.
-           <br /><br />
-           I'm open to Job opportunities where I can contribute, learn and grow. 
-           If you have a good opportunity that matches my skills and experience then don't hesitate to contact me.
+           We're Web Developer who build Websites, Web Applications and each have over 5 years of experience in the world of web designing and graphic design, Check out some of our work in the Projects section.
+<br /><br />
+we also share content related to the stuff that we've learned over the years in Web Development so it can help other people of the Dev Community. Feel free to Connect or Contact us Via Email.
+<br /><br />
+We're always open to Job opportunities where we can contribute, learn and grow. If you have a good opportunity that matches our skills and experience, then don't hesitate to reach out to us.
         </p>
     </div>
 
     <div class="skills">
         <h2 class="title3">
-            My Skills
+            Our Skills
         </h2>
     <div class="all_skill">
            Html, Css, Javascript, Reactjs, Github, Responsive Design, Python, Unity, Google Ads, Website, Coding tutorial.
@@ -78,8 +74,8 @@
         <h1 style="text-align: center;text-transform: uppercase;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Projects</h1>
         <p class="des2">
-            Here you will find some of the personal and clients projects
-            that I created with each project containing its own description
+            Here you will find some of the clients projects
+            that we created with each project containing its own description
         </p>
         <div class="projects-display">
             <div class="project1">
@@ -118,8 +114,8 @@
     <div class="contact">
         <h1 style="text-align: center;text-transform: uppercase;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Contact Me</h1>
-    <p class="des2">Be free to Contact me by submitting the form below
-         and I will get back to you as soon as possible</p>
+    <p class="des2">Be free to Contact us by submitting the form below
+         and we will get back to you as soon as possible</p>
 
          <div class="forms">
          <form action="mailto:hawkview24@gmail.com">
@@ -139,14 +135,14 @@
             <div class="box">
             <h2 style="text-transform: uppercase;font-weight: 700;color: white;">Damola Balogun</h2>
             <p class="des3">
-                A focused Web Developer building 
+                A focused Agency building
                 Websites and Web Applications that leads to the success of the overall product.
             </p>
             <h2 style="text-transform: uppercase;font-weight: 700;color: white;text-align: right;">Social</h2>
             </div>
             <hr />
             <br /><br />
-            <p style="text-align: center;color: white;">© Copyright 2022. Made by Damola Balogun</p>
+            <p style="text-align: center;color: white;">© Copyright 2024/2025. Made by Damola Balogun</p>
         </footer>
 
 </body>
