--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ We're always open to Job opportunities where we can contribute, learn and grow. 
             Our Skills
         </h2>
     <div class="all_skill">
-           Html, Css, Javascript, Reactjs, Github, Responsive Design, Python, Unity, Google Ads, Website, Coding tutorial.
+           Html, Css, Javascript, Reactjs, Github, Responsive Design, Python, Unity, Google Ads, Graphic Design.
     </div></div></div></div>
       <br /><br />
     <div class="projects">
