--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
     <header>  
         <h1 class="title">AlphaStudioPro</h1>
+
+        <i class="menu_bar"onclick="open_menu()">Menu</i> 
+
+       <div class="pc_menu">
+        <a href="#">Home </a>
+        <a href="#">Service </a>
+        <a href="#">Projects </a>
+        <a href="#">About-Me </a>
+        <a href="#">Contact-Me </a>
+       </div>
     </header>
     <br /><br /><br />
     <div class="menu">
@@ -30,7 +40,7 @@
         <br /><br />
         <h1><span style="font-weight: 700">Hey,</span> I'm Damola Balogun</h1>
         <p class="des">
-            Got a Project, We can help you to Build Outstanding and Modern Websites.
+            Got a Project, I can help you to Build Outstanding and Modern Websites.
         </p>
         <button class="cta">
             <a href="mailto:hawkview24@gmail.com">
@@ -42,62 +52,60 @@
     </div>
 
     <div class="about_section">
-        <h1>About Us</h1>
+        <h1>About Me</h1>
     <p class="des2">
-        Here you will find more information about me and my team, what we do, and our current skills in terms of web designing and graphic design.
+        Here you will find more information about me, what I do,
+        and my current skills in terms of programming and skill.
     </p>
 
     <div class="bio">
 
     <div class="about_me">
         <h2 class="title2">
-            Get to Know Our Designer!
+            Get to Know Me!
         </h2>
         <p class="infos">
-           We're Web Developer who build Websites, Web Applications and each have over 5 years of experience in the world of web designing and graphic design, Check out some of our work in the Projects section.
-<br /><br />
-we also share content related to the stuff that we've learned over the years in Web Development so it can help other people of the Dev Community. Feel free to Connect or Contact us Via Email.
-<br /><br />
-We're always open to Job opportunities where we can contribute, learn and grow. If you have a good opportunity that matches our skills and experience, then don't hesitate to reach out to us.
+           I'm a Web Developer who bullds Websites, Web Applications and have 3 years of experience in the world of web designing, Check out some of my work in the Projects section.
+           <br /><br />
+           I also like sharing content related to the stuff that I have learned over the years in
+           Web Development so it can help other people of the Dev Community.
+           Feel free to Connect or Follow me on my Linkedin, Email.
+           <br /><br />
+           I'm open to Job opportunities where I can contribute, learn and grow. 
+           If you have a good opportunity that matches my skills and experience then don't hesitate to contact me.
         </p>
     </div>
 
     <div class="skills">
         <h2 class="title3">
-            Our Skills
+            My Skills
         </h2>
     <div class="all_skill">
-           Html, Css, Javascript, Reactjs, Github, Responsive Design, Python, Unity, Google Ads, Graphic Design.
+           Html, Css, Javascript, Reactjs, Github, Responsive Design, Python, Unity, Google Ads, Website, Coding tutorial.
     </div></div></div></div>
       <br /><br />
     <div class="projects">
         <h1 style="text-align: center;text-transform: uppercase;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Projects</h1>
         <p class="des2">
-            Here you will find some of the clients projects
-            that we created with each project containing its own description
+            Here you will find some of the personal and clients projects
+            that I created with each project containing its own description
         </p>
         <div class="projects-display">
             <div class="project1">
-                <a href="https://clonenetflixlanding.netlify.app/">
-                <img src="https://i.ibb.co/M5472Nc/Screenshot-2023-08-16-165422.png" alt="First Image" />
-                <h3>Netflix Landing Page Clone</h3>
-                </a>
-            </div>
-            <div class="project1">
-                <a href="https://biscollary-enterprises.netlify.com">
+                <a href="https://biscollary-enterprises.netlify.app">
                 <img src="https://i.ibb.co/7pR3Y9D/Biscollary-enterprises.png" alt="First Image" />
                 <h3>Biscollary-Enterprises</h3>
             </a>
             </div>
             <div class="project1">
-                <a href="https://biscollary-herbs.netlify.com">
+                <a href="https://biscollary-herbs.netlify.app">
                 <img src="https://i.ibb.co/WkLtXkn/biscollary-herbs.png" alt="First Image" />
                 <h3>Biscollary-Herbs</h3>
             </a>
             </div>
             <div class="project1">
-                <a href="https://dynamic-blog-project.netlify.com">
+                <a href="https://dynamic-blog-project.netlify.app">
                 <img src="https://i.ibb.co/wzG7rzF/bloghome.png" alt="First Image" />
                 <h3>Blog-Website</h3>
             </a>
@@ -114,35 +122,36 @@ We're always open to Job opportunities where we can contribute, learn and grow. 
     <div class="contact">
         <h1 style="text-align: center;text-transform: uppercase;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Contact Me</h1>
-    <p class="des2">Be free to Contact us by submitting the form below
-         and we will get back to you as soon as possible</p>
+    <p class="des2">Be free to Contact me by submitting the form below
+         and I will get back to you as soon as possible</p>
 
          <div class="forms">
          <form action="mailto:hawkview24@gmail.com">
-            <br /><br />
             <input type="name" placeholder="Enter Your Name" required/><br /><br />
             <input type="email" placeholder="Enter Your Email" required/><br /><br />
             <textarea placeholder="Enter Your Message" required></textarea><br /><br />
             <input type="submit" value="Send">
          </form>
-         <br /><br />
+         <h1>Or</h1>
+         <div class="other-form">
+         <p>
+          Contact No: <a href="/tel:08071246083"> 08071246083 </a><br />
+          Email me at <a href="/mailto:hawkview24@gmail.com"> hawkview24@gmail.com </a><br />
+          Contact Address: 4, Alhaji Alli Balogun street, Ewegbemi Bus-stop, Meiran
+        </p>
+        </div>
          </div>
          </div>
-    <br /><br /><br /><br />
 
         <footer>
-            <br /><br /><br /><br />
+            <br />
             <div class="box">
-            <h2 style="text-transform: uppercase;font-weight: 700;color: white;">Damola Balogun</h2>
-            <p class="des3">
-                A focused Agency building
-                Websites and Web Applications that leads to the success of the overall product.
-            </p>
-            <h2 style="text-transform: uppercase;font-weight: 700;color: white;text-align: right;">Social</h2>
+                <a href="refund-policy.html">Refund Policy</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="terms&conditions.html">Terms & Conditions</a>
             </div>
             <hr />
-            <br /><br />
-            <p style="text-align: center;color: white;">© Copyright 2024/2025. Made by Damola Balogun</p>
+            <p style="text-align: center;color: white;">© Copyright 2024. Made by Damola Balogun</p>
         </footer>
 
 </body>
